Changes in logos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Prasham Jain" width="80">
         </figure>
 
         <div class="info-content">
@@ -137,9 +137,9 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
-          </li>
+          </li> -->
 
         </ul>
 
@@ -212,7 +212,7 @@
                 <h4 class="h4 service-item-title">App Development</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Learning development of applications for  Android.
                 </p>
               </div>
 
@@ -221,14 +221,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/k.jpeg" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Database</h4>
+                <h4 class="h4 service-item-title">Database Management</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                    Proficient in Database Management using mySQL and MongoDB
                 </p>
               </div>
 
@@ -465,7 +465,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/download.jpeg" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Milestone Master Platform</h3>
@@ -725,7 +725,7 @@
         - #CONTACT
       -->
 
-      <article class="contact" data-page="contact">
+      <!-- <article class="contact" data-page="contact">
 
         <header>
           <h2 class="h2 article-title">Contact</h2>
@@ -753,7 +753,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
     </div>
 
